@@ -9,6 +9,7 @@
 */
 
 #include "config/config.h"
+#include "nvplay.h"
 #include "util/util.h"
 #include <nvplay.h>
 #include <cmake/nvplay_version.h>
@@ -18,6 +19,8 @@
 #define GDB_IMPLEMENTATION
 #include "gdbstub.h"
 
+nvplay_state_t nvplay_state;
+
 void NVPlay_RunTests()
 {
 	Logging_Write(log_level_message, "GPU test mode\n");
@@ -25,7 +28,7 @@ void NVPlay_RunTests()
 	if (config.num_tests_enabled == 0)
 	{
 		Logging_Write(log_level_warning, "No tests to run. Exiting...\n");
-		exit(5);
+		NVPlay_Shutdown(NVPLAY_EXIT_CODE_NO_TESTS);
 	}
 
 	Logging_Write(log_level_message, "Running %ld tests...\n", config.num_tests_enabled);
@@ -82,39 +85,32 @@ void NVPlay_Run()
 	if (!current_device.device_info.hal->init_function)
 	{
 		Logging_Write(log_level_error, "This GPU is not yet supported :(\n");
-		exit(3);
+		NVPlay_Shutdown(NVPLAY_EXIT_CODE_UNIMPLEMENTED_GPU);
 	}
 
 	if (!current_device.device_info.hal->init_function())
 	{
 		Logging_Write(log_level_error, "GPU initialisation failed!\n");
-		exit(4);
+		NVPlay_Shutdown(NVPLAY_EXIT_CODE_NO_GPU_INIT);
 	}	
+
+	current_device.initialised = true; 
 
 	// Make sure that nv_pmc_boot_0 got set
 	current_device.nv_pmc_boot_0 = NV_ReadMMIO32(NV_PMC_BOOT);
 
 	if (command_line.load_reg_script)
-		Script_Run();
+		NVPlay_RunScript();
 	else if (command_line.use_test_ini)
 		NVPlay_RunTests(); 
 	else
-		GPURepl_Run();
-}
-
-void NVPlay_Shutdown()
-{
-	if (current_device.device_info.hal->shutdown_function)
-		current_device.device_info.hal->shutdown_function();
-
-	Logging_Shutdown();
-	exit(0);
+		NVPlay_Repl();
 }
 
 void NVPlay_ShowHelpAndExit()
 {
 	printf("%s", msg_help); // Done this way to shut up GCC
-	NVPlay_Shutdown();
+	NVPlay_Shutdown(NVPLAY_EXIT_CODE_HELP_MENU);
 }
 
 /* Initialise NVPlay! */
@@ -133,7 +129,7 @@ bool NVPlay_Init(int32_t argc, char** argv)
 	if (!Logging_Init())
 	{
 		printf("Failed to initialise logging system\n");
-		exit(7);
+		NVPlay_Shutdown(NVPLAY_EXIT_CODE_LOG_INIT_FAIL);
 	}
 
 	Logging_Write(log_level_message, APP_SIGNON_STRING);
@@ -142,19 +138,31 @@ bool NVPlay_Init(int32_t argc, char** argv)
 	if (command_line.show_help)
 	{
 		NVPlay_ShowHelpAndExit();
-		return false;
+		return true;
 	}
 
+	NVPlay_DetectWindows();
+
 	if (!PCI_BiosIsPresent())
-		exit(1);
+		NVPlay_Shutdown(NVPLAY_EXIT_CODE_NO_PCI);
 
 	if (!GPU_Detect())
-		exit(2);
+		NVPlay_Shutdown(NVPLAY_EXIT_CODE_UNSUPPORTED_GPU);
 
 	if (!Config_Load())
-		exit(3); 
+		NVPlay_Shutdown(NVPLAY_EXIT_CODE_CONFIG_LOAD_FAIL); 
 
 	return true; 
+}
+
+void NVPlay_Shutdown(uint32_t exit_code)
+{
+	if (current_device.initialised 
+		&& current_device.device_info.hal->shutdown_function)
+		current_device.device_info.hal->shutdown_function();
+
+	Logging_Shutdown();
+	exit(exit_code);
 }
 
 int main(int argc, char** argv) 
@@ -167,13 +175,13 @@ int main(int argc, char** argv)
 		else
 		 	printf("Unknown fatal initialisation error!\n");
 
-		exit(0x5042);
+		NVPlay_Shutdown(NVPLAY_EXIT_CODE_UNKNOWN_FATAL);
 	}
 
 	if (!command_line.boot_only)
 	{
 		NVPlay_Run();
-		NVPlay_Shutdown();
+		NVPlay_Shutdown(NVPLAY_EXIT_CODE_SUCCESS);
 	}
 	
  	return 0;
