@@ -22,7 +22,7 @@ const char* msg_help = "nvPlay help:\n\n"
 "\x1b[1;32m-?, -help.\x1b[1;00m: Show this text and exit\n\n"
 "\x1b[1;32m---SUPPORTED GRAPHICS CARDS---\x1b[1;00m\n\n"
 "The following graphics cards are supported by nvPlay:\n"
-"\x1b[1;32mBest support (a wide range of tests and understanding available):\n\n"
+"\x1b[1;32mBest support (a wide range of tests and understanding available)\x1b[1;00m:\n\n"
 "nVIDIA RIVA 128 (NV3)\n"
 "nVIDIA RIVA 128 ZX (NV3T)\n\n"
 "\x1b[1;32mSome support (some tests and understanding)\x1b[1;00m:\n"
